Closed
Bug 608458
Opened 14 years ago
Closed 14 years ago
"ASSERTION: points should be different" in MaybeMoveToMidPoint
Categories
(Core :: Layout, defect, P3)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla2.0b8
People
(Reporter: jruderman, Unassigned)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
115 bytes,
text/html
|
Details | |
1.37 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: points should be different: 'Not Reached', file layout/base/nsCSSRenderingBorders.cpp, line 433
This assertion was added in bug 500141.
Hmmm. This means we're wasting the time drawing the corner between two zero-width border sides.
Maybe I should drop the assertion; it doesn't really matter what we do in that case, I guess, although we probably shouldn't be there in the first place.
I think it's best to move the point.
Attachment #489632 -
Flags: review?(roc)
Attachment #489632 -
Flags: review?(roc) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
OS: Mac OS X → All
Priority: -- → P3
Hardware: x86 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
You need to log in
before you can comment on or make changes to this bug.
Description
•