Fix assertion (that should have turned the tree orange).  (Bug 608458)  r=roc  a2.0=blocking(on 500141)